Check out the last thing in the notebook

--- a/report-template/ex_article.tex
+++ b/report-template/ex_article.tex
@@ -11,8 +11,8 @@
 % Optional PDF information
 \ifpdf
 \hypersetup{
-  pdftitle={An Example Article},
-  pdfauthor={D. Doe, P. T. Frank, and J. E. Smith}
+  pdftitle={Movie Recommendation},
+  pdfauthor={N. Grant}
 }
 \fi
 
@@ -40,22 +40,17 @@
 
 % REQUIRED
 \begin{abstract}
-  This is an example SIAM \LaTeX\ article. This can be used as a
-  template for new articles.  Abstracts must be able to stand alone
-  and so cannot contain citations to the paper's references,
-  equations, etc.  An abstract must consist of a single paragraph and
-  be concise. Because of online formatting, abstracts must appear as
-  plain as possible. Any equations should be inline.
+In this project we explored various techniques, both used in and out of class to try to accurately predict movie ratings based off of the data set used in lab. 
 \end{abstract}
 
 % REQUIRED
 \begin{keywords}
-  example, \LaTeX
+  Movie Recommendation, Decision Trees, SVD
 \end{keywords}
 
 % REQUIRED
 \begin{AMS}
-  68Q25, 68R10, 68U05
+  15A18, 62P20
 \end{AMS}
 
 \section{Introduction}
