--- a/report-template/ex_shared.tex
+++ b/report-template/ex_shared.tex
@@ -26,7 +26,7 @@
 \newsiamthm{claim}{Claim}
 
 % Sets running headers as well as PDF title and authors
-\headers{An Example Article}{D. Doe, P. T. Frank, and J. E. Smith}
+\headers{Movie Recommendation}{N. Grant, R. Guin, T. Hom, S. Qiu}
 
 % Title. If the supplement option is on, then "Supplementary Material"
 % is automatically inserted before the title.
