--- a/report-template/ex_shared.tex
+++ b/report-template/ex_shared.tex
@@ -30,16 +30,15 @@
 
 % Title. If the supplement option is on, then "Supplementary Material"
 % is automatically inserted before the title.
-\title{An Example Article\thanks{Submitted to the editors DATE.
+\title{Movie Recommendation\thanks{Submitted to the editors DATE.
 \funding{This work was funded by the Fog Research Institute under contract no.~FRI-454.}}}
 
 % Authors: full names plus addresses.
-\author{Dianne Doe\thanks{Imagination Corp., Chicago, IL 
-  (\email{ddoe@imag.com}, \url{http://www.imag.com/\string~ddoe/}).}
-\and Paul T. Frank\thanks{Department of Applied Mathematics, Fictional University, Boise, ID 
-  (\email{ptfrank@fictional.edu}, \email{jesmith@fictional.edu}).}
-\and Jane E. Smith\footnotemark[3]}
-
+\author{Nathan Grant
+\and Rudra Guin
+\and Tyler Hom
+\and Steven Qiu}
+  
 \usepackage{amsopn}
 \DeclareMathOperator{\diag}{diag}
 
