--- a/report-template/ex_shared.tex
+++ b/report-template/ex_shared.tex
@@ -30,8 +30,7 @@
 
 % Title. If the supplement option is on, then "Supplementary Material"
 % is automatically inserted before the title.
-\title{Movie Recommendation\thanks{Submitted to the editors DATE.
-\funding{This work was funded by the Fog Research Institute under contract no.~FRI-454.}}}
+\title{Movie Recommendation}
 
 % Authors: full names plus addresses.
 \author{Nathan Grant
